fixing header to properly stretch

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     padding: 0px 150px 100px 150px;
 }
 
@@ -86,7 +86,6 @@
 .header img{
     width: 100px;
     height: auto;
-    flex: 0 0 10px;
 }
 .pushblock{
     flex: 1;
